--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
 language: ruby
 rvm:
   - 2.2.3
+install:
+  - bundle install --jobs=3 --retry=3
+  - make # install ruby gem locally
+script: yes | rake
