--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: ruby
 rvm: 2.2.3
 install:
   - bundle install --jobs=3 --retry=3
-  - make # install ruby gem locally
-script: rake
+  - make # build ruby gem locally
+script: rake # run travis modules
