--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ rvm: 2.2.3
 install:
   - bundle install --jobs=3 --retry=3
   - make # build ruby gem locally
-script: rake # run travis modules
+script: yes | rake # run travis modules
